--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "medicine-app",
+  "homepage": "https://ayazpathan.github.io/medicine-application",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,18 +9,21 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.6.0",
+    "gh-pages": "^3.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^3.2.0",
     "react-table": "^7.6.3",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
